Css z-index fix. Fetch och Promise polyfill.

--- a/less/sitevision.less
+++ b/less/sitevision.less
@@ -11,7 +11,7 @@ header {
 
 		pointer-events: all;
 
-		z-index: 1;
+		z-index: 1100;
 
 		.transition(top 300ms ease-in-out);
 
@@ -44,7 +44,7 @@ header {
 
 		overflow: hidden;
 		
-		z-index: 100;
+		z-index: 1100;
 
 		@media (max-width: 650px) {
 			display: none;
@@ -90,7 +90,7 @@ header {
 
 		pointer-events: all;
 
-		z-index: 100;
+		z-index: 1100;
 
 		.transition(top 300ms ease-in-out);
 
