--- a/less/ui-components/popupwindow.less
+++ b/less/ui-components/popupwindow.less
@@ -12,6 +12,8 @@
 
 		cursor: pointer;
 
+		z-index: 1100;
+
 		.transition(all 300ms ease-in-out);
 		.transform(translateY(80px));
 
